force-app/main/default/objects/Property__c/fields/Amenities__c.field-meta.xml
<CustomField>
    <fullName>Amenities__c</fullName>
    <label>Amenities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>🚐 Shuttle Service (to and from the metro station)</fullName>
            </value>
            <value>
                <fullName>🌐 Wi-Fi Enabled Common Areas</fullName>
            </value>
            <value>
                <fullName>🛍️ Retail Outlets</fullName>
            </value>
            <value>
                <fullName>🛡️ 24/7 Security</fullName>
            </value>
            <value>
                <fullName>🐾 Pet-Friendly Environment</fullName>
            </value>
            <value>
                <fullName>🏛️ Grand Entrance Lobby</fullName>
            </value>
            <value>
                <fullName>🛋️ Residents’ Lounge</fullName>
            </value>
            <value>
                <fullName>🛗 3 High-Speed Elevators</fullName>
            </value>
            <value>
                <fullName>🏢 3.3m Ceiling Heights</fullName>
            </value>
            <value>
                <fullName>🧱 Efficient Floor Plans</fullName>
            </value>
            <value>
                <fullName>🛁 All Bedrooms Ensuite + Powder Room</fullName>
            </value>
            <value>
                <fullName>🧺 Dedicated Laundry Room</fullName>
            </value>
            <value>
                <fullName>🏙️ Low-Density Development</fullName>
            </value>
            <value>
                <fullName>🏊 Private Swimming Pool</fullName>
            </value>
            <value>
                <fullName>📍 Corner Plot Location</fullName>
            </value>
            <value>
                <fullName>☀️ Solar Powered Building</fullName>
            </value>
            <value>
                <fullName>🏋️ Panoramic View Gym</fullName>
            </value>
            <value>
                <fullName>🧖 Separate Sauna for Him &amp; Her</fullName>
            </value>
            <value>
                <fullName>🏊 Adult Swimming Pool</fullName>
            </value>
            <value>
                <fullName>🧒 Kids Swimming Pool</fullName>
            </value>
            <value>
                <fullName>🧘 Outdoor Yoga Space</fullName>
            </value>
            <value>
                <fullName>🎠 Kids Play Area</fullName>
            </value>
            <value>
                <fullName>🔥 Barbecue Area</fullName>
            </value>
            <value>
                <fullName>🏓 Indoor Sports Room</fullName>
            </value>
            <value>
                <fullName>⛳ Mini Golf Course</fullName>
            </value>
            <value>
                <fullName>🎬 Outdoor Poolside Cinema</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>