force-app/main/default/objects/Property__c/fields/Available_Exe_Studio__c.field-meta.xml
<CustomField>
    <fullName>Available_Exe_Studio__c</fullName>
    <label>Available-Exe Studio</label>
    <summaryFilterItems>
        <field>Property_Unit__c.Inventory_Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Property_Unit__c.Unit_Type__c</field>
        <operation>equals</operation>
        <value>Exe Studio</value>
    </summaryFilterItems>
    <summaryForeignKey>Property_Unit__c.Property__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>