force-app/main/default/objects/Property__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Office Building</fullName>
            </value>
            <value>
                <fullName>Retail Space</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Hospitality Properties</fullName>
            </value>
            <value>
                <fullName>Mixed Use</fullName>
            </value>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Townhouse</fullName>
            </value>
            <value>
                <fullName>Medical Office Building</fullName>
            </value>
            <value>
                <fullName>Life Sciences Facility</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Logistics Center</fullName>
            </value>
            <value>
                <fullName>Shopping Mall</fullName>
            </value>
            <value>
                <fullName>Restaurant Space</fullName>
            </value>
            <value>
                <fullName>Resort</fullName>
            </value>
            <value>
                <fullName>Parking Garage</fullName>
            </value>
            <value>
                <fullName>Sports &amp; Entertainment Venue</fullName>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>