force-app/main/default/objects/Property__c/fields/Total_Units_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Units_Price__c</fullName>
    <label>Total Units Price</label>
    <summarizedField>Property_Unit__c.Total_Amount__c</summarizedField>
    <summaryForeignKey>Property_Unit__c.Property__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>