force-app/main/default/objects/Property__c/fields/Utilities_Available__c.field-meta.xml
<CustomField>
    <fullName>Utilities_Available__c</fullName>
    <label>Utilities Available</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electricity</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Sewage</fullName>
            </value>
            <value>
                <fullName>Fire hydrants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>