force-app/main/default/objects/Property__c/listViews/All_Sold_Properties.listView-meta.xml
<ListView>
    <fullName>All_Sold_Properties</fullName>
    <columns>NAME</columns>
    <columns>Amenities__c</columns>
    <columns>Property_Status__c</columns>
    <columns>Property_Type__c</columns>
    <columns>Total_Units_Price__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Property_Status__c</field>
        <operation>equals</operation>
        <value>Sold</value>
    </filters>
    <label>All Sold Properties</label>
</ListView>